--- a/css/main.css
+++ b/css/main.css
@@ -92,6 +92,7 @@ h1, h2, h3, h4, p {
   width: 200px; }
 
 .index-menu {
+  cursor: pointer;
   background-color: #e67e30;
   position: absolute;
   font-size: 25px;
@@ -103,6 +104,25 @@ h1, h2, h3, h4, p {
   text-align: center;
   -webkit-border-radius: 50%;
           border-radius: 50%; }
+  .index-menu:hover {
+    -webkit-box-shadow: 0 0 2px 0 rgba(63, 63, 63, 0.8);
+            box-shadow: 0 0 2px 0 rgba(63, 63, 63, 0.8); }
+
+.icon {
+  opacity: 0;
+  position: absolute;
+  margin-top: -12px;
+  top: 50%;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  -webkit-transition: opacity 0.7s linear;
+  transition: opacity 0.7s linear; }
+
+.open {
+  -webkit-transition: opacity 0.7s linear;
+  transition: opacity 0.7s linear;
+  opacity: 1; }
 
 .index-menu i {
   color: #ffffff; }
