--- a/css/main.css
+++ b/css/main.css
@@ -82,9 +82,13 @@ h1, h2, h3, h4, p {
 .back-menu ul li a {
   font-weight: 700;
   text-transform: uppercase;
-  color: #ffffff; }
+  color: #ffffff;
+  -webkit-transition: color 0.2s linear, border 0.2s linear;
+  transition: color 0.2s linear, border 0.2s linear; }
 
 .back-menu ul li a:hover {
+  -webkit-transition: color 0.2s linear, border 0.2s linear;
+  transition: color 0.2s linear, border 0.2s linear;
   color: #e67e30;
   border-bottom: 2px solid; }
 
@@ -107,6 +111,10 @@ h1, h2, h3, h4, p {
   .index-menu:hover {
     -webkit-box-shadow: 0 0 2px 0 rgba(63, 63, 63, 0.8);
             box-shadow: 0 0 2px 0 rgba(63, 63, 63, 0.8); }
+
+.shadow-open {
+  -webkit-box-shadow: 0 0 2px 0 rgba(63, 63, 63, 0.8);
+          box-shadow: 0 0 2px 0 rgba(63, 63, 63, 0.8); }
 
 .icon {
   opacity: 0;
